--- a/public_html/css/perspective_pageturn_styles.css
+++ b/public_html/css/perspective_pageturn_styles.css
@@ -38,7 +38,7 @@ page navigation
 
 #nav{
     position: relative;
-    top:-70px;
+    top:-335px;
     width:100%;
     height:40px;
     font-family: "Indie Flower", cursive;
@@ -49,20 +49,23 @@ page navigation
 }
 #nav span{
     position: absolute;
-    width: 35px;
-    height: 35px;
+    width: 520px;
+    height: 60px;
     border-radius:100%;
-    padding:5px;
-    line-height: 35px;
+    line-height: 55px;
 }
 #nav span:hover{
     cursor: pointer;
 }
 #left_arrow{
     left:135px;
+    text-align: left;
+    padding-left: 10px;
 }
 #right_arrow{
     right:135px;
+    text-align: right;
+    padding-right: 10px;
 }
 
 /*****************************************
@@ -79,8 +82,26 @@ div[class*="page"],.first, .last{
     background-color:#ab966e;
     opacity:1;
     text-align:center;
-    z-index: 1;
     border:2px solid #9A8763;
+}
+
+.first{
+    z-index: 5;
+}
+#right5{
+    z-index: 10;
+}
+#right4{
+    z-index: 20;
+}
+#right3{
+    z-index: 30;
+}
+#right2{
+    z-index: 40;
+}
+#right1{
+    z-index: 50;
 }
 
 .front, .back{
@@ -129,9 +150,6 @@ right:10px;
     background-color:#c9be7e;
 }
 
-/*.turned{
-    z-index: 1;
-}*/
 /*****************************************
 page turn
 *****************************************/
@@ -151,3 +169,39 @@ page turn
             transform-style:preserve-3d;
 }
 
+/*display images and captions on the two open pages */
+.turned img, .open img, 
+.turned a, .open a,
+.turned span, .open span{
+    display: inline;
+}
+.thumb1, .thumb7{
+    -webkit-transform: rotate(-4deg) translateZ(2px);
+    -moz-transform: rotate(-4deg) translateZ(2px);
+    -ms-transform: rotate(-4deg) translateZ(2px);
+    -o-transform: rotate(-4deg) translateZ(2px);
+    transform: rotate(-4deg) translateZ(2px);
+}
+
+.thumb2, .thumb8 {
+    -webkit-transform: rotate(4deg) translateZ(2px);
+    -moz-transform: rotate(4deg) translateZ(2px);
+    -ms-transform: rotate(4deg) translateZ(2px);
+    -o-transform: rotate(4deg) translateZ(2px);
+    transform: rotate(4deg)translateZ(2px);
+ }
+
+.thumb4,.thumb6{
+    -webkit-transform: rotate(-3deg) translateZ(2px);
+    -moz-transform: rotate(3deg) translateZ(2px);
+    -ms-transform: rotate(3deg) translateZ(2px);
+    -o-transform: rotate(3deg) translateZ(2px);
+    transform: rotate(-3deg) translateZ(2px);
+}
+.thumb3,.thumb5{
+    -webkit-transform: rotate(-1deg) translateZ(2px);
+    -moz-transform: rotate(-1deg) translateZ(2px);
+    -ms-transform: rotate(-1deg) translateZ(2px);
+    -o-transform: rotate(-1deg) translateZ(2px);
+    transform: rotate(-1deg) translateZ(2px);
+} 
